added headers to all html pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>Nuestra web</h1>
+      <h2>Home</h2>
       <nav class="menu">
         <ul>
           <li><a href="index.html">Home</a></li>
