--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,17 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="contacto"></div>
-    <p>Contacto</p>
+    <header>
+      <h1>Nuestra web</h1>
+      <h2>Contacto</h2>
+      <nav class="menu">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="quienes-somos.html">Quienes Somos</a></li>
+          <li><a href="nuestro-cv.html">Nuestros CVs</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
