added images folder, added images inside folder and created 2 profiles in quienes-somos.html

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -19,5 +19,21 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div>
+        <h2>Marian Lopez</h2>
+        <figure>
+          <img src="/images/penelope.jpeg" width="250" height="300" />
+        </figure>
+        <p>Passionate coder and actress from time to time</p>
+      </div>
+      <div>
+        <h2>Francesco Fabrissin</h2>
+        <figure>
+          <img src="/images/jonny.jpeg" width="250" height="300" />
+        </figure>
+        <p>Professional cricket player</p>
+      </div>
+    </main>
   </body>
 </html>
