Content Home completed

--- a/index.html
+++ b/index.html
@@ -18,5 +18,26 @@
         </ul>
       </nav>
     </header>
+    <section>
+      <h2>¿En qué consiste el bootcamp?</h2>
+      <p>El bootcamp es un curso intensivo para aprender a programar diferentes lenguajes.</br>
+        Comenzarás con un <strong>precurso en el cual tendrás entregas semanales de Html, Javascript y CSS</strong></br>
+        Los miércoles tendrás una clase teórica de 18 a 20.30
+      </p>
+      <h2>Estructura del día</h2>
+      <p>Os vamos a contar cómo sería aprox la estructura del día:</p>
+      <h3>Daily</h3>
+      <p>El día comenzará con una daily de unos 30 minutos donde hablaremos del día anterior, stoppers</br>
+      que tuvimos y cómo nos sentimos. </p>
+      <h3>Desayuno</h3>
+      <p>Tras unas dos horas aprox de teoría y algún ejercicio práctico tenemos la pausa del desayuno de 30min</p>
+      <center><img src="https://images.ecestaticos.com/G8-gUJ6nZX44fmN3KoIDwja5b_I=/239x71:2026x1410/1200x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2Fdf5%2Ff64%2F3c6%2Fdf5f643c69ab51813e984c20a2d0228e.jpg"
+     alt="increible desayuno del bootcamp" width="500"></center>
+      <h3>Comida</h3>
+      <p>Unas 2-3 horas más de teoría y pasamos a la pausa de la comida de 1 hora. <strong>Hay que ser puntuales</strong></p>
+      <h3>Challenge</h3>
+      <p>El momento más duro del día es cuando estás más cansado y tienes que enfrentarte al challenge.</br>
+      Es aquí cuando no tenemos hora de volver a casa, volveremos cuando no podamos más o hayamos terminado el challenge.</p>
+    </section>
   </body>
 </html>
