added cvs to nuestro-cv.html

--- a/nuestro-cv.html
+++ b/nuestro-cv.html
@@ -19,5 +19,73 @@
         </ul>
       </nav>
     </header>
+    <div>
+      <h2>Francesco Fabrissin</h2>
+      <figure>
+        <img src="/images/jonny.jpeg" width="250" height="300" alt="jonny" />
+      </figure>
+      <div class="personal-info">
+        <ul>
+          <li>30 years old</li>
+          <li>email: frafabri@yahoo.it</li>
+          <li>Barcelona</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Work experience</h3>
+        <ul>
+          <li>
+            <h4>Pro coder</h4>
+            <h5>2022 - forever</h5>
+          </li>
+          <li>
+            <h4>Bad coder</h4>
+            <h5>Before...</h5>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h3>Personals skills</h3>
+        <ul>
+          <li>Good coding</li>
+          <li>Bad coding</li>
+          <li>Cricket</li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <h2>Marian Lopez</h2>
+      <figure>
+        <img src="/images/penelope.jpeg" width="250" height="300" alt="jonny" />
+      </figure>
+      <div class="personal-info">
+        <ul>
+          <li>33 years old</li>
+          <li>email: marianlopig@gmail.com</li>
+          <li>Barcelona</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Work experience</h3>
+        <ul>
+          <li>
+            <h4>Pro coder</h4>
+            <h5>2022 - forever</h5>
+          </li>
+          <li>
+            <h4>Bad coder</h4>
+            <h5>Before...</h5>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h3>Personals skills</h3>
+        <ul>
+          <li>Good coding</li>
+          <li>Bad coding</li>
+          <li>Actress</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
