--- a/contacto.html
+++ b/contacto.html
@@ -19,5 +19,21 @@
         </ul>
       </nav>
     </header>
+    <form>
+      Name: <input type="text" name="first_last_name" />
+      <br />
+      <br />
+      Email: <input type="text" name="email" required />
+      <br />
+      <br />
+      Comments:
+      <br />
+      <textarea name="textarea" rows="5" cols="20">
+Write something here</textarea
+      >
+      <br />
+      <br />
+      <input type="submit" value="send" />
+    </form>
   </body>
 </html>
